--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,10 @@
 
     <string name="feedback">Feedback</string>
     <string name="feedback_mail_chooser">Thanks for the feedback!</string>
-    <string name="feedback_mail_address"> ideas@faudroids.org</string>
+    <string name="feedback_mail_address">ideas@faudroids.org</string>
     <string name="feedback_mail_subject">Feedback TODO</string>
 
+    <string name="open_challenges">Open challenges</string>
+    <string name="distance_km">%1$s km</string>
+    <string name="percentage_completed">%1$s%% completed</string>
 </resources>
