--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="open_challenges">Open challenges</string>
     <string name="distance_km">%1$s km</string>
     <string name="percentage_completed">%1$s%% completed</string>
+
+    <string name="duration">Duration</string>
+    <string name="distance_in_km">Distance (km)</string>
+    <string name="avg_speed_in_kmh">Avg. Speed (km/h)</string>
 </resources>
