--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="hours_of_running">%1$s hours of running</string>
     <string name="all_activities">All activities</string>
     <string name="no_activities">No activities yet</string>
+    <string name="new_activity">New activity</string>
     <string name="no_finished_challenges">No finished challenges yet</string>
     <string name="no_open_challenges">You have finished all challenges, congratulations!</string>
 
