ui: update credits with progress bar lib

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
         &lt;a href=&quot;https://github.com/ReactiveX/RxAndroid&quot;&gt;RxAndroid&lt;/a&gt; by Reactivex&lt;br&gt;
         &lt;a href=&quot;https://github.com/futuresimple/android-floating-action-button&quot;&gt;Floating Action Button&lt;/a&gt; by futuresimple&lt;br&gt;
         &lt;a href=&quot;https://github.com/Raizlabs/DBFlow&quot;&gt;DBFlow&lt;/a&gt; by Raizlabs&lt;br&gt;
+        &lt;a href=&quot;https://github.com/lsjwzh/MaterialLoadingProgressBar&quot;&gt;MaterialLoadingProgressBar&lt;/a&gt; by Isjwzh&lt;br&gt;
         &lt;a href=&quot;https://fabric.io&quot;&gt;Crashlytics&lt;/a&gt; by Twitter&lt;br&gt;
         &lt;a href=&quot;https://github.com/google/material-design-icons&quot;&gt;Material Design Icons&lt;/a&gt; by Google Inc.&lt;br&gt;
         &lt;a href=&quot;https://source.android.com/&quot;&gt;Android Open Source Project&lt;/a&gt; by Google Inc. and the Open Handset Alliance&lt;br&gt;
